# machine-report-rust

./: Cargo.toml  README.md
src/: device_info.rs  draw.rs  main.rs
