[package]
name = "machine-report"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of USGC's machine report"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rywng/machine-report-rust"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["alloc"] }
crossterm = "0.29.0"
rustix = { version = "1.1.4", features = ["system"] }
